moar loc and prefix fixes

--- a/localisation/english/replace/zz_evolved_civics_l_english.yml
+++ b/localisation/english/replace/zz_evolved_civics_l_english.yml
@@ -834,7 +834,7 @@
 	# former civic_genetic_aristocracy
 	civic_tec_regular_genetic_ascendancy:0 "§M£tec_civic_leader£§!Genetic Ascendancy"
 	civic_tec_regular_genetic_ascendancy_desc:0 "['concept_tec_leader_civic']\n\nPeople of this society especially preserve uniqueness of their biological origins, and Leaders are traditionally chosen and groomed primarily on the basis of their genetic superiority."
-	civic_tec_regular_genetic_ascendancy_tooltip:0 "$tec_loc_c_unlocks_feature$ §H£unity£ $council_agenda_agenda_tec_genetic_ascendancy_name$§!\nThe §Y£unity£ $council_agenda_agenda_tec_genetic_ascendancy_name$ Agenda§! remove some Negative traits from Organic Leaders, at the cost of £council£ §RExperience§! per trait.\n\n$tec_loc_c_unlocks_feature$ §H£building£ $building_tec_epigenetic_chambers_plural$§!\nThe £building£ $building_tec_epigenetic_chambers_plural$ are a Planet unique building that reduce the backlash of the £unity£ $council_agenda_agenda_tec_genetic_ascendancy_name$ Agenda, increase §YLeader Capacity§! and provide the empire with a small amount of monthly §YOrganic Leader Experience§!, increased by §Y$tec_loc_planet_ascension_plural$§!\n\nAdditionally, deceased organic leaders have a chance of being §GRestored§! at a lower level based on the number of §Y£building£ $building_tec_epigenetic_chambers_plural$§!.\n\n"
+	civic_tec_regular_genetic_ascendancy_tooltip:0 "$tec_loc_c_unlocks_feature$ §H£unity£ $council_agenda_agenda_tec_genetic_ascendancy_name$§!\nThe §Y£unity£ $council_agenda_agenda_tec_genetic_ascendancy_name$ Agenda§! remove Negative traits from Organic Leaders, at the cost of £council£ §RExperience§! per trait\nThe number of leaders that can benefit from this effect can be increased, with £ruler£ Ruler and £council£ Councilors always taking priority.\n\n$tec_loc_c_unlocks_feature$ §H£building£ $building_tec_epigenetic_chambers_plural$§!\nThe £building£ $building_tec_epigenetic_chambers_plural$ is a empire unique building that reduce the backlash and increase the number of leaders that can benefit of the £unity£ $council_agenda_agenda_tec_genetic_ascendancy_name$ Agenda, increase §Y£council£ Leader Capacity§! and §YLeader Experience§!, increased by §Y$tec_loc_planet_ascension_plural$§!\n\nAdditionally, deceased organic leaders have a chance of being §GRestored§! at a lower level and age based on the number of §Y£building£ $building_tec_epigenetic_chambers_plural$§!.\n\n"
 # /
 
 # Job Alteration Civics
@@ -929,7 +929,7 @@
 
 	civic_catalytic_processing:0 "§P£tec_civic_job£§!Catalytic Processing"
 	civic_catalytic_processing_desc:0 "['concept_tec_job_alteration_civics_foundry']\n\nBy focusing their industrial efforts on catalytic chemistry, this civilization has unlocked the key to using organic materials in the construction of spacebound structures."
-	civic_catalytic_processing_tooltip:0 "$tec_loc_c_unlocks_feature$ §H£alloys£ Catalytic Production§!\nReplaces ['concept_tec_job_foundry_plural_icon'] with ['concept_tec_job_specialist_catalytic_technician_icon'] Jobs.\n\n$tec_loc_c_unlocks_feature$ §H£alloys£ Biolytic Reaction§!\n£building£ §YFood Processing§! buildings increase the output of §Y£job_catalytic_technician£ $job_catalytic_technician_plural$§! by §G5%§! per §Y£society£ Food Production Technology§! researched (such as Eco-Simulation), up to §G20%§!, based on the building upgrade.\n§HThis bonus is disabled when a similar alloy-boosting building (such as £building£ Coordinated Fulfillment Center) is present.§!"
+	civic_catalytic_processing_tooltip:0 "$tec_loc_c_unlocks_feature$ §H£alloys£ Catalytic Production§!\nReplaces ['concept_tec_job_foundry_plural_icon'] with ['concept_tec_specialist_job_catalytic_technician_icon'] Jobs.\n\n$tec_loc_c_unlocks_feature$ §H£alloys£ Biolytic Reaction§!\n£building£ §YFood Processing§! buildings increase the output of §Y£job_catalytic_technician£ $job_catalytic_technician_plural$§! by §G5%§! per §Y£society£ Food Production Technology§! researched (such as Eco-Simulation), up to §G20%§!, based on the building upgrade.\n§HThis bonus is disabled when a similar alloy-boosting building (such as £building£ Coordinated Fulfillment Center) is present.§!"
 
 	civic_hive_catalytic_processing:1 "§P£tec_civic_job£§!Catalytic Plasmolysis"
 	civic_hive_catalytic_processing_desc:0 "['concept_tec_job_alteration_civics_foundry']\n\nThe Hive Mind reprocesses excess organic matter into advanced resources suitable for spacebound structures."
@@ -937,7 +937,7 @@
 
 	civic_machine_catalytic_processing:1 "§P£tec_civic_job£§!Biological Reprocessing"
 	civic_machine_catalytic_processing_desc:0 "['concept_tec_job_alteration_civics_foundry']\n\nThe Machine Intelligence reprocesses redundant organic matter into advanced resources suitable for spacebound structures."
-	civic_machine_catalytic_processing_tooltip:0 "$tec_loc_c_unlocks_feature$ §H£alloys£ Catalytic Production§!\nReplaces ['concept_tec_job_fabricator_plural_icon'] with ['concept_tec_job_specialist_catalytic_drone_machine_icon'] Jobs.\n\n$tec_loc_c_unlocks_feature$ §H£alloys£ Biolytic Reaction§!\n§Y£building£ Food Processing§! buildings increase the output of §Y£job_catalytic_drone£ $job_catalytic_drone_plural$§! by §G5%§! per §Y£society£ Food Production Technology§! researched (such as Eco-Simulation), up to §G20%§!, based on the building upgrade.\n§HThis bonus is disabled when a similar alloy-boosting building (such as £building£ Coordinated Fulfillment Center) is present.§!"
+	civic_machine_catalytic_processing_tooltip:0 "$tec_loc_c_unlocks_feature$ §H£alloys£ Catalytic Production§!\nReplaces ['concept_tec_job_fabricator_plural_icon'] with ['concept_tec_specialist_catalytic_drone_machine_icon'] Jobs.\n\n$tec_loc_c_unlocks_feature$ §H£alloys£ Biolytic Reaction§!\n§Y£building£ Food Processing§! buildings increase the output of §Y£job_catalytic_drone£ $job_catalytic_drone_plural$§! by §G5%§! per §Y£society£ Food Production Technology§! researched (such as Eco-Simulation), up to §G20%§!, based on the building upgrade.\n§HThis bonus is disabled when a similar alloy-boosting building (such as £building£ Coordinated Fulfillment Center) is present.§!"
 
 	civic_crafters:0 "§P£tec_civic_job£§!Masterful Crafters"
 	civic_crafters_desc:0 "['concept_tec_job_alteration_civic']\n\nA penchant for meticulous crafting lies at the heart of this society. Deft appendages and keen sensory organs aid them in creating truly wondrous treasures even in the most basic of trades."
@@ -1134,7 +1134,7 @@
 	# Note: Not job alteration but job addition
 	civic_tec_regular_syndical:0 "§P£tec_civic_job£§!Syndical Camaraderie"
 	civic_tec_regular_syndical_desc:0 "['concept_tec_job_alteration_civic']\n\nIn this society working-class people are traditionally glorified and form a global community, based on idealistic principles of collectivism and equality." 
-	civic_tec_regular_syndical_tooltip:0 "Each upgrade of the £building£ §YCapital§! will provide a £job_labour_hero£ §Y$job_labour_hero$§! job.\nNon-Arcology £district£ §YMenial§! Districts provide §G+1§! extra job each and have §R0.25§! increased §Y$tec_loc_energy$§! upkeep.\n\n"
+	civic_tec_regular_syndical_tooltip:0 "Each upgrade of the £building£ §YCapital§! will provide a £job_tec_labour_hero£ §Y$job_tec_labour_hero$§! job.\nNon-Arcology £district£ §YMenial§! Districts provide §G+1§! extra job each and have §R0.25§! increased §Y$tec_loc_energy$§! upkeep.\n\n"
 
 	# Anglers swap
 	civic_tec_regular_anglers_lithoid_tooltip:1 "On §Y(Wet Climate)§! worlds, ['concept_tec_district_mining_regular_plural_icon'] are replaced by ['concept_tec_district_tec_aqua_mining_regular_plural_icon'].\n§Y$concept_tec_district_tec_aqua_mining_regular_plural_icon$§! are uncapped, cost §Y50§! less §Y$tec_loc_minerals$§! on §HOcean§! or ['concept_tec_perfect_planet', Perfect] Worlds, and provide ['concept_tec_job_tec_reef_miner_plural_icon'] and ['concept_tec_job_pearl_diver_lithoid_plural_icon'].\nAdds the §H$trait_aquatic$§! trait.\n\nWith the §YHydrocentric§! you can flood specific planet types depending on your origin."
@@ -1151,7 +1151,22 @@
 
 	civic_tec_regular_quantum_alloys:0 "§P£tec_civic_job£§!Quantic Forging"
 	civic_tec_regular_quantum_alloys_desc:0 "['concept_tec_job_alteration_civics_foundry']\n\nThe use of quantum entanglement techniques during alloy refining processes provides superdense and efficient alloys, hyper-bonded at a sub-atomic level, by applying intense amounts of energy."
-	civic_tec_regular_quantum_alloys_tooltip:0 "['concept_tec_job_foundry_quantum_plural_icon'] swap half their §Y$tec_loc_minerals$§! upkeep with §Y$tec_loc_energy$§!.\n$mod_base_planet_metallurgists$ Output from $mod_base_planet_technician$: §G+1%§!\n\n§HThis production bonus is disabled when a similar civic alloy-boosting building (such as £building£ Coordinated Fulfillment Center) is present.§!\n"
+	civic_tec_regular_quantum_alloys_tooltip:0 "$tec_loc_c_unlocks_feature$ §H£alloys£ Quantic Compression§!\n['concept_tec_job_foundry_quantum_plural_icon'] swap half their §Y$tec_loc_minerals$§! upkeep with §Y$tec_loc_energy$§!.\n\n$tec_loc_c_unlocks_feature$ §H£energy£ Electric Overcharge§!\n£building£ §Y$building_energy_grid$s§! increase the output of §Y£job_foundry£ Foundry§! jobs by §G5%§! per §Y£physics£ Energy Production Technology§! researched (such as $tech_power_plant_2$), up to §G20%§!, based on the building upgrade.\n§HThis production bonus is disabled when a similar civic alloy-boosting building (such as £building£ Coordinated Fulfillment Center) is present.§!\n"
+	#OLD_civic_tec_regular_quantum_alloys_tooltip:0 "['concept_tec_job_foundry_quantum_plural_icon'] swap half their §Y$tec_loc_minerals$§! upkeep with §Y$tec_loc_energy$§!.\n$mod_base_planet_metallurgists$ Output from $mod_base_planet_technician$: §G+1%§!\n\n§HThis production bonus is disabled when a similar civic alloy-boosting building (such as £building£ Coordinated Fulfillment Center) is present.§!\n"
+
+	# 	civic_catalytic_processing_tooltip:0 "$tec_loc_c_unlocks_feature$ §H£alloys£ Catalytic Production§!\nReplaces ['concept_tec_job_foundry_plural_icon'] with ['concept_tec_job_specialist_catalytic_technician_icon'] Jobs.\n\n$tec_loc_c_unlocks_feature$ §H£alloys£ Biolytic Reaction§!\n£building£ §YFood Processing§! buildings increase the output of §Y£job_catalytic_technician£ $job_catalytic_technician_plural$§! by §G5%§! per §Y£society£ Food Production Technology§! researched (such as Eco-Simulation), up to §G20%§!, based on the building upgrade.\n§HThis bonus is disabled when a similar alloy-boosting building (such as £building£ Coordinated Fulfillment Center) is present.§!"
+
+	civic_tec_corporate_quantum_alloys:0 "§P£tec_civic_job£§!Quantic Alloy-Profiteering"
+	civic_tec_corporate_quantum_alloys_desc:0 "$civic_tec_regular_quantum_alloys_desc$"
+	civic_tec_corporate_quantum_alloys_tooltip:0 "$civic_tec_regular_quantum_alloys_tooltip$"
+
+	civic_tec_hive_quantum_alloys:0 "§P£tec_civic_job£§!Quantic Moulding"
+	civic_tec_hive_quantum_alloys_desc:0 "$civic_tec_regular_quantum_alloys_desc$"
+	civic_tec_hive_quantum_alloys_tooltip:0 "['concept_tec_job_alloy_drone_quantum_plural_icon'] swap half their §Y$tec_loc_minerals$§! upkeep with §Y$tec_loc_energy$§!.\n\n£job_foundry£ Alloy Drones Output from £job_technician_drone£ $job_technician_drone_plural$: §G+1%§!\n\n§HThis bonus is disabled when a similar civic alloy-boosting building (such as £building£ Coordinated Fulfillment Center) is present.§!\n"
+
+	civic_tec_machine_quantum_alloys:0 "§P£tec_civic_job£§!Quantic Meta-Fabrication"
+	civic_tec_machine_quantum_alloys_desc:0 "$civic_tec_regular_quantum_alloys_desc$"
+	civic_tec_machine_quantum_alloys_tooltip:0 "['concept_tec_job_fabricator_quantum_plural_icon'] swap half their §Y$tec_loc_minerals$§! upkeep with §Y$tec_loc_energy$§!.\n\n$mod_base_planet_metallurgists$ Output from $mod_base_planet_technician$: §G+1%§!\n\n§HThis bonus is disabled when a civic alloy-boosting building (such as £building£ Coordinated Fulfillment Center) is present.§!\n"
  # /
 # /
 
@@ -1685,9 +1700,6 @@
 	civic_tec_corporate_researchers_labrats_desc:0 "['concept_tec_job_alteration_civic']\n\nWith progress comes profit, and with profit new ways of creating progress by ''first-handed'' intervention; Some completely willing to pay for new experiences, or others who are in need of a better income, all recruited and trained for experimenting with completely safe and totally not lethal new technologies and discoveries."
 	civic_tec_corporate_researchers_labrats_tooltip:0 "£building£ §YResearch Labs§! replace a £job_researcher£ Researcher job by a £job_researcher£ §YTest Subject§! worker job.\n£job_researcher£ Test Subjects produce §Y$tec_loc_research_resources$§! and a small amount of £trade_value£ §Y$TRADE_VALUE$§!, but have a slightly reduced £happiness£ §RHappiness§!.\n\nIf there is any £job_livestock£ Livestock species on the planet, £job_researcher£ Test Subjects will generate extra £trade_value£ §Y$TRADE_VALUE$§! and each livestock will generate additional §Y$tec_loc_research_resources$§!."
 
-	civic_tec_corporate_quantum_alloys:0 "§P£tec_civic_job£§!Quantic Alloy-Profiteering"
-	civic_tec_corporate_quantum_alloys_desc:0 "$civic_tec_regular_quantum_alloys_desc$"
-	civic_tec_corporate_quantum_alloys_tooltip:0 "$civic_tec_regular_quantum_alloys_tooltip$"
  # /
 	# Researcher half swap
 
@@ -2070,9 +2082,6 @@
 	civic_tec_hive_scavengers_desc:0 "['concept_tec_job_alteration_civic']\n\nEach single drone of this Collective is specifically taught since inception to take back any useful element found while patroling, doing menial tasks or overall day-to-day operations, and this has led to an efficient and intelligent way of obtaining and reusing any relevant or usable element from any kind of debris or technological remain."
 	civic_tec_hive_scavengers_tooltip:0 "$civic_scavengers_effects$\nEach two upgrades of the £building£ §YCapital Building§! will provide a £job_tec_scavenger_drone£ §Y$job_tec_scavenger_drone$§! job.\n- $job_tec_scavenger_drone_effect_desc_default$."
 
-	civic_tec_hive_quantum_alloys:0 "§P£tec_civic_job£§!Quantic Moulding"
-	civic_tec_hive_quantum_alloys_desc:0 "$civic_tec_regular_quantum_alloys_desc$"
-	civic_tec_hive_quantum_alloys_tooltip:0 "['concept_tec_job_alloy_drone_quantum_plural_icon'] swap half their §Y$tec_loc_minerals$§! upkeep with §Y$tec_loc_energy$§!.\n\n£job_foundry£ Alloy Drones Output from £job_technician_drone£ $job_technician_drone_plural$: §G+1%§!\n\n§HThis bonus production bonus is disabled when a similar civic alloy-boosting building (such as £building£ Coordinated Fulfillment Center) is present.§!\n"
 
  # /
 # /
@@ -2449,9 +2458,6 @@
 	civic_tec_machine_scavengers_desc:0 "['concept_tec_job_alteration_civic']\n\nFor this Machine Intelligence, no scrap or byproduct is useless; The degree of recycling and reuse it has has been mastered during decades, and its applied as a main protocol on each drone, each automated system and every frigate."
 	civic_tec_machine_scavengers_tooltip:0 "$civic_scavengers_effects$\nEach two upgrades of the £building£ §YCapital Building§! will provide a £job_tec_scavenger_drone£ §Y$job_tec_scavenger_drone$§! job\n- $job_tec_scavenger_drone_effect_desc_default$."
 
-	civic_tec_machine_quantum_alloys:0 "§P£tec_civic_job£§!Quantic Meta-Fabrication"
-	civic_tec_machine_quantum_alloys_desc:0 "$civic_tec_regular_quantum_alloys_desc$"
-	civic_tec_machine_quantum_alloys_tooltip:0 "['concept_tec_job_fabricator_quantum_plural_icon'] swap half their §Y$tec_loc_minerals$§! upkeep with §Y$tec_loc_energy$§!.\n\n$mod_base_planet_metallurgists$ Output from $mod_base_planet_technician$: §G+1%§!\n\n§HThis bonus production bonus is disabled when a civic alloy-boosting building (such as £building£ Coordinated Fulfillment Center) is present.§!\n"
  # /
 # /
 
