--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -174,7 +174,7 @@
 		job_tec_ai_operator:0 "Operator"
 		job_tec_ai_operator_plural:0 "Operators"
 		job_tec_ai_operator_desc:0 "Operators ensure the correct functioning of the AI terminals on each planet."
-		job_tec_ai_operator_effect_desc:0 "['concept_tec_job_tec_ai_operator_plural_icon'] convert §Y$tec_loc_research_resources$§! into §Y$tec_loc_unity$§! and §Y$tec_loc_sr_tec_ai_power$§!"
+		job_tec_ai_operator_effect_desc:0 "['concept_tec_specialist_job_tec_ai_operator_plural_icon'] convert §Y$tec_loc_research_resources$§! into §Y$tec_loc_unity$§! and §Y$tec_loc_sr_tec_ai_power$§!"
 		mod_job_tec_ai_operator_per_pop:0 "§G+1§! $job_tec_ai_operator$ Job Per $VALUE$ Pops"
 		mod_job_tec_ai_operator_per_pop_short:0 "\n§G+1§! £mod_job_tec_ai_operator_add£ per $VALUE$ £pop£"
 		mod_job_tec_ai_operator_add:0 "$job_tec_ai_operator$ Jobs"
@@ -190,7 +190,7 @@
 		job_tec_ai_ordinator:0 "Ordinator"
 		job_tec_ai_ordinator_plural:0 "Ordinators"
 		job_tec_ai_ordinator_desc:0 "Ordinators manage both bureaucratic and spiritual issues by transcribing and serving the purpose of the main divine AI."
-		job_tec_ai_ordinator_effect_desc:0 "['concept_tec_job_tec_ai_ordinator_plural_icon'] convert §Y$tec_loc_research_resources$§! into §Y$tec_loc_unity$§! and §Y$tec_loc_sr_tec_ai_power$§!"
+		job_tec_ai_ordinator_effect_desc:0 "['concept_tec_specialist_job_tec_ai_ordinator_plural_icon'] convert §Y$tec_loc_research_resources$§! into §Y$tec_loc_unity$§! and §Y$tec_loc_sr_tec_ai_power$§!"
 		mod_job_tec_ai_ordinator_per_pop:0 "§G+1§! $job_tec_ai_ordinator$ Job Per $VALUE$ Pops"
 		mod_job_tec_ai_ordinator_per_pop_short:0 "\n§G+1§! £mod_job_tec_ai_ordinator_add£ per $VALUE$ £pop£"
 		mod_job_tec_ai_ordinator_add:0 "$job_tec_ai_ordinator$ Jobs"
@@ -913,8 +913,8 @@
 	mod_job_tec_supervisor_bureaucrat_per_pop:0 "§G+1§! $job_tec_supervisor_bureaucrat$ Job per $VALUE$ Pops"
 	mod_job_tec_supervisor_bureaucrat_per_pop_short:0 "\n§G+1§! £mod_job_tec_supervisor_bureaucrat_add£ per $VALUE$ £pop£"
 
-	job_tec_mogul:0 "tec_mogul"
-	job_tec_mogul_plural:0 "tec_moguls"
+	job_tec_mogul:0 "Mogul"
+	job_tec_mogul_plural:0 "Moguls"
 	job_tec_mogul_desc:0 "A prominent and influential member of financial elite."
 	job_tec_mogul_effect_desc:0 "£job_tec_mogul£ $job_tec_mogul_plural$ produce §Y$tec_loc_trade_value$§!, §Y$tec_loc_amenities$§!, and increases §Y$tec_loc_trade_value$§! by §G+5%§!."
 	mod_job_tec_mogul_add:0 "$job_tec_mogul$ Jobs"
@@ -3153,7 +3153,7 @@
 	job_tec_reef_miner:0 "Litho-Reef Miner"
 	job_tec_reef_miner_plural:0 "Litho-Reef Miner"
 	job_tec_reef_miner_desc:0 "Using traditional cultivation techniques, these miners sow and extract rich parts of lithoreefs providing a nerverending stream of highly rich minerals."
-	job_tec_reef_miner_effect_desc:0 "['concept_tec_job_tec_reef_miner_plural_icon'] produce §Y$tec_loc_minerals$§! and §Y$tec_loc_trade_value$§!."
+	job_tec_reef_miner_effect_desc:0 "['concept_tec_worker_job_tec_reef_miner_plural_icon'] produce §Y$tec_loc_minerals$§! and §Y$tec_loc_trade_value$§!."
 	mod_job_tec_reef_miner_add:0 "$job_tec_reef_miner$ Jobs"
 	mod_job_tec_reef_miner_per_pop:0 "§G+1§! $job_tec_reef_miner$ Job per $VALUE$ Pops"
 	mod_job_tec_reef_miner_per_pop_short:0 "\n§G+1§! £mod_job_tec_reef_drone_add£ per $VALUE$ £pop£"
@@ -3161,7 +3161,7 @@
 	job_tec_thermogenerator_drone:0 "Thermogenerator Drone"
 	job_tec_thermogenerator_drone_plural:0 "Thermogenerator Drones"
 	job_tec_thermogenerator_drone_desc:0 "Thermogenerator Drones maintain and supervise the infrastructure deep within the oceanic depths, generating energy from the thermogenearting processes down there."
-	job_tec_thermogenerator_drone_effect_desc:0 "['concept_tec_job_tec_thermogenerator_drone_plural_icon'] produce §Y$tec_loc_energy$§! and §Y$tec_loc_amenities_gestalt$§!."
+	job_tec_thermogenerator_drone_effect_desc:0 "['concept_tec_worker_job_tec_thermogenerator_drone_plural_icon'] produce §Y$tec_loc_energy$§! and §Y$tec_loc_amenities_gestalt$§!."
 	mod_job_tec_thermogenerator_drone_add:0 "$job_tec_thermogenerator_drone$ Jobs"
 	mod_job_tec_thermogenerator_drone_per_pop:0 "§G+1§! $job_tec_thermogenerator_drone$ Job per $VALUE$ Pops"
 	mod_job_tec_thermogenerator_drone_per_pop_short:0 "\n§G+1§! £mod_job_technician_drone_add£ per $VALUE$ £pop£"
@@ -3169,7 +3169,7 @@
 	job_tec_hydrorelay_drone:0 "Hydro-relay Drone"
 	job_tec_hydrorelay_drone_plural:0 "Hydro-relay Drones"
 	job_tec_hydrorelay_drone_desc:0 "Drones dedicated to overview, maitain and ensure a constant stream of hydrogen isotopes production."
-	job_tec_hydrorelay_drone_effect_desc:0 "['concept_tec_job_tec_hydrorelay_drone_plural_icon'] produce §Y$tec_loc_physics$§! and §Y$tec_loc_amenities_gestalt$§!."
+	job_tec_hydrorelay_drone_effect_desc:0 "['concept_tec_worker_job_tec_hydrorelay_drone_plural_icon'] produce §Y$tec_loc_physics$§! and §Y$tec_loc_amenities_gestalt$§!."
 	mod_job_tec_hydrorelay_drone_add:0 "$job_tec_hydrorelay_drone$ Jobs"
 	mod_job_tec_hydrorelay_drone_per_pop:0 "§G+1§! $job_tec_hydrorelay_drone$ Job per $VALUE$ Pops"
 	mod_job_tec_hydrorelay_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_hydrorelay_drone_add£ per $VALUE$ £pop£"
@@ -3177,7 +3177,7 @@
 	job_tec_aqua_drone:0 "Aquadrone"
 	job_tec_aqua_drone_plural:0 "Aquadrones"
 	job_tec_aqua_drone_desc:0 "Specialized drones with the task of caring, nurturing and controlling the underwater production of biomass."
-	job_tec_aqua_drone_effect_desc:0 "['concept_tec_job_tec_aqua_drone_plural_icon'] produce §Y$tec_loc_food$§! and §Y$tec_loc_amenities_gestalt$§!."
+	job_tec_aqua_drone_effect_desc:0 "['concept_tec_worker_job_tec_aqua_drone_plural_icon'] produce §Y$tec_loc_food$§! and §Y$tec_loc_amenities_gestalt$§!."
 	mod_job_tec_aqua_drone_add:0 "$job_tec_aqua_drone$ Jobs"
 	mod_job_tec_aqua_drone_per_pop:0 "§G+1§! $job_tec_aqua_drone$ Job per $VALUE$ Pops"
 	mod_job_tec_aqua_drone_per_pop_short:0 "\n§G+1§! £mod_job_angler_add£ per $VALUE$ £pop£"
@@ -3185,7 +3185,7 @@
 	job_tec_reef_drone:0 "Reef Drone"
 	job_tec_reef_drone_plural:0 "Reef Drones"
 	job_tec_reef_drone_desc:0 "Specialized drones with the task of caring, nurturing and controlling vast petroreefs, harvesting rich materials and minerals."
-	job_tec_reef_drone_effect_desc:0 "['concept_tec_job_tec_reef_drone_plural_icon'] produce §Y$tec_loc_minerals$§! and §Y$tec_loc_amenities_gestalt$§!."
+	job_tec_reef_drone_effect_desc:0 "['concept_tec_worker_job_tec_reef_drone_plural_icon'] produce §Y$tec_loc_minerals$§! and §Y$tec_loc_amenities_gestalt$§!."
 	mod_job_tec_reef_drone_add:0 "$job_tec_reef_drone$ Jobs"
 	mod_job_tec_reef_drone_per_pop:0 "§G+1§! $job_tec_reef_drone$ Job per $VALUE$ Pops"
 	mod_job_tec_reef_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_reef_drone_add£ per $VALUE$ £pop£"
@@ -3193,7 +3193,7 @@
 	job_tec_depth_drone:0 "Depth Drone"
 	job_tec_depth_drone_plural:0 "Depth Drones"
 	job_tec_depth_drone_desc:0 "These drones inhabit dark and depth regions near the seabed, patrolling and ensuring the stability and prosperity of underwater colonies."
-	job_tec_depth_drone_effect_desc: "['concept_tec_job_tec_depth_drone'] consumes [tec_food_or_equivalent_upkeep] and generates a small amount of [job_tec_depth_drone_growth] and reduces £crime£ §YDeviancy§! "
+	job_tec_depth_drone_effect_desc: "['concept_tec_specialist_job_tec_depth_drone'] consumes [tec_food_or_equivalent_upkeep] and generates a small amount of [job_tec_depth_drone_growth] and reduces £crime£ §YDeviancy§! "
 	mod_job_tec_depth_drone_add:0 "$job_tec_depth_drone$ Jobs"
 	mod_job_tec_depth_drone_per_pop:0 "§G+1§! $job_tec_depth_drone$ Job per $VALUE$ Pops"
 	mod_job_tec_depth_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_depth_drone_add£ per $VALUE$ £pop£"
