grouped civic text

--- a/localisation/english/replace/zz_evolved_civics_l_english.yml
+++ b/localisation/english/replace/zz_evolved_civics_l_english.yml
@@ -851,6 +851,18 @@
 	civic_memorialist_desc:0 "['concept_tec_job_alteration_civic']\n\nThis empire pays tribute to memories and sapients of the past, deriving greater stability and insight from the continuous cycles of death, rebirth and legacy."
 	civic_memorialist_tooltip:1 "$tec_loc_c_unlocks_feature$ §H£building£ Galactic Memorial§!\nReplace £building£ $building_autochthon_monument$s with §Y$building_galactic_memorial_1$s§!, which provide ['concept_tec_specialist_job_death_chronicler_icon'] Jobs.\n$building_galactic_memorial_regular_tooltip$\n\n$tec_loc_c_unlocks_feature$ §H£building£ Remembrance Sites§!\nUnlocks §Y$building_tec_memorialist_site_1_plural$§!, which provide ['concept_tec_worker_job_tec_memorialist_icon'] Jobs, and also provide extra §Y$tec_loc_unity$§! on §HTomb Worlds§! and §HRelic Worlds§!."
 
+	civic_tec_corporate_memorialist:0 "§L£tec_civic_feature£§!Business Memorialism"
+	civic_tec_corporate_memorialist_desc:0 "['concept_tec_feature_civic']\n\nThis megacorporation has the tradition of constantly inscribing and recompilating act, tribute and memorial to workers and sapients of the past, deriving greater stability and insight from the continuous cycles of death, rebirth, construction and wealthy legacy."
+	civic_tec_corporate_memorialist_tooltip:0 "Can build £building£ §Y$building_galactic_memorial_1$§!\n$building_galactic_memorial_megacorp_tooltip$\n- $job_death_chronicler_effect_desc_civic$."
+	building_galactic_memorial_megacorp_tooltip:1 "§YSanctuaries of Repose§! provide £job_death_chronicler£ $job_death_chronicler$ jobs, and improve §YGoverning Ethics Attraction§! on §HTomb Worlds§! and §HEcumenopoleis§!"
+
+	civic_hive_memorialist:0 "§P£tec_civic_job£§!Memorialist"
+	civic_hive_memorialist_desc:0 "['concept_tec_job_alteration_civic']\n\nThe Hive Mind pays special regard to the passing of other sapient entities as a means of centering its own, undying self."
+	civic_memorialist_gestalt_tooltip:1 "Can build £building£ §Y$building_galactic_memorial_1$§!\n$building_galactic_memorial_gestalt_tooltip$\n$job_chronicle_drone_effect_desc_civic$"
+
+	civic_machine_memorialist:0 "§P£tec_civic_job£§!Memorial Allocation"
+	civic_machine_memorialist_desc:0 "['concept_tec_job_alteration_civic']\n\nThe Machine Intelligence fine-tunes its understanding of core protocols through careful analysis of entropy in the wider universe. Redundancy is data, on the path to greater resilience."
+
 	civic_anglers:0 "§P£tec_civic_job£§!Anglers"
 	civic_anglers_desc:0 "['concept_tec_job_alteration_civic']\n['concept_tec_climate_civic']\n\nAdept at utilizing nature's bounty, this society provides for itself a stable influx of sustenance and economic value."
 	civic_anglers_tooltip:1 "$tec_loc_c_unlocks_feature$ §H£planet£ Sea-Knowers§!\nOn §Y(Wet Climate)§! worlds, ['concept_tec_district_farming_regular_plural_icon'] are replaced by ['concept_tec_district_tec_aqua_farming_regular_plural_icon'].\n§Y$concept_tec_district_tec_aqua_farming_regular_plural_icon$§! are uncapped, cost §Y50§! less §Y$tec_loc_minerals$§! on §HOcean§! or ['concept_tec_perfect_planet', Perfect] Worlds and provide ['concept_tec_job_angler_plural_icon'] and ['concept_tec_job_pearl_diver_plural_icon'].\n\n$tec_loc_c_unlocks_feature$ §H£planet£ Aquatic Affinity§!\nAdds the §H$trait_aquatic$§! trait.\nWith the §YHydrocentric§! you can flood specific planet types depending on your origin."
@@ -1593,14 +1605,11 @@
 	civic_tec_corporate_reanimators_desc:0 "['concept_tec_feature_civic']\n\nIn the world of business, death isn't a true end as the machine of profit will continue, and each participant on this neverending cycle knows it well; debts and mortgages must be paid on time, and if not, they will be paid off-time, no matter the living state of the issued."
 	civic_tec_corporate_reanimators_tooltip:0 "£building£ §YMilitary Academy§! building is replaced by £building£ §YDread Encampment§!, allowing the recruitment of §YUndead Armies§!.\nAllows the use of the £influence£ §YEternal Shifts§! Edict, which will make £building£ §YDread Encampments§! dramatically increase the §Yproduction§! of worker jobs and £trade_value£ §Y$TRADE_VALUE$§! on the planet, with a small chance of a worker pop §Rdying§! each year, completing its respective debt in the afterlife as a £job_purge£ Reanimated Army.\n\nDuring a planet combat, §YSome§! deceased organic living armies will be reanimated, as any §RLethally§! purged pop if a §YDread Encampment§! is present, as £job_purge£ §YUndead Armies§!.\nDefeated organic leviathans can sometimes be resurrected.\n\n"
 
-	civic_tec_corporate_memorialist:0 "§L£tec_civic_feature£§!Business Memorialism"
-	civic_tec_corporate_memorialist_desc:0 "['concept_tec_feature_civic']\n\nThis megacorporation has the tradition of constantly inscribing and recompilating act, tribute and memorial to workers and sapients of the past, deriving greater stability and insight from the continuous cycles of death, rebirth, construction and wealthy legacy."
-	civic_tec_corporate_memorialist_tooltip:0 "Can build £building£ §Y$building_galactic_memorial_1$§!\n$building_galactic_memorial_megacorp_tooltip$\n- $job_death_chronicler_effect_desc_civic$."
-	building_galactic_memorial_megacorp_tooltip:1 "§YSanctuaries of Repose§! provide £job_death_chronicler£ $job_death_chronicler$ jobs, and improve §YGoverning Ethics Attraction§! on §HTomb Worlds§! and §HEcumenopoleis§!"
-
 	civic_tec_corporate_pompous:0 "§L£tec_civic_feature£§!Exclusive Partnership"
 	civic_tec_corporate_pompous_desc:0 "['concept_tec_feature_civic']\n\nWhen it comes to business, there is one thing clear for this megacorporation: 'You can only afford it if they decide you can''. Each product, service and diplomatic relationship is only reserved to the most exquisite elite in the galaxy."
 	civic_tec_corporate_pompous_tooltip:0 "Can only engage in §YDiplomacy§! with other empires if they are the proposer."
+
+	# Memorialist with the normal version
 
 	civic_tec_corporate_espionage:0 "§L£tec_civic_feature£§!Intel Agencies"
 	civic_tec_corporate_espionage_desc:0 "['concept_tec_feature_civic']\n\nTO DO"
@@ -2065,11 +2074,7 @@
 # Hivemind Job Alteration Civics
 # ------------------------------------------------------------ §P£tec_civic_job£§!
  # Vanilla
-	civic_hive_memorialist:0 "§P£tec_civic_job£§!Memorialist"
-	civic_hive_memorialist_desc:0 "['concept_tec_job_alteration_civic']\n\nThe Hive Mind pays special regard to the passing of other sapient entities as a means of centering its own, undying self."
-	civic_memorialist_gestalt_tooltip:1 "Can build £building£ §Y$building_galactic_memorial_1$§!\n$building_galactic_memorial_gestalt_tooltip$\n$job_chronicle_drone_effect_desc_civic$"
-
-
+	# Memorialist above with normal version
  # /
  # Evolved
 	# Aquatics
@@ -2453,8 +2458,7 @@
 # Machine Job Alteration Civics
 # ------------------------------------------------------------ §P£tec_civic_job£§!
  # Vanilla
-	civic_machine_memorialist:0 "§P£tec_civic_job£§!Memorial Allocation"
-	civic_machine_memorialist_desc:0 "['concept_tec_job_alteration_civic']\n\nThe Machine Intelligence fine-tunes its understanding of core protocols through careful analysis of entropy in the wider universe. Redundancy is data, on the path to greater resilience."
+	# Memorialist with the normal version
  # /
  # Evolved
 	civic_tec_machine_scavengers:0 "§P£tec_civic_job£§!Reprocessors"
